<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="@drawable/sendlo"
        tools:context=".view.LoginFragment">
        <LinearLayout
            android:orientation="vertical"
            android:background="@drawable/shap_btn"
            android:padding="25dp"
            android:layout_margin="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="5dp"
                app:errorEnabled="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textWebEmailAddress"
                    android:ems="10"
                    android:textStyle="bold|normal"
                    android:textColor="@color/purple_700"
                    android:textSize="15sp"
                    android:maxLines="1"
                    android:id="@+id/edMail"
                    />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/outlinedText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="5dp"
                app:endIconMode="password_toggle"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textWebPassword"
                    android:textStyle="bold|normal"
                    android:textColor="@color/purple_700"
                    android:textSize="15sp"
                    android:id="@+id/pass"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/sbimt"
                    android:text="@string/login"
                    android:textSize="9dp"
                    android:textStyle="bold|normal"
                    android:background="@drawable/shap_btn"
                    android:textColor="@color/purple_700"
                    android:layout_margin="10dp"
                    android:padding="7dp"
                    app:backgroundTint="@null"
                    app:rippleColor="@color/teal_700"
                    android:textAppearance="?attr/textAppearanceButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <Button
                    android:id="@+id/cals"
                    android:text="@string/cancel"
                    android:textStyle="bold|normal"
                    android:textSize="9dp"
                    android:background="@drawable/shap_btn"
                    android:textColor="@color/white"
                    android:layout_margin="10dp"
                    android:padding="7dp"
                    android:focusable="true"
                    android:autoSizePresetSizes="12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>


        </LinearLayout>
    </LinearLayout>



</layout>